Bug 333293 UMR in nsAccessibleText::GetCurrectOffset prevChar if aOffset <= 0 r=aaronleventhal sr=roc